@@ -2,7 +2,7 @@
 <T3locallang>
 	<meta type="array">
 		<type>module</type>
-		<description>Language labels for module 'additional_reports'</description>
+		<description>Language labels for module 'Additional reports'</description>
 	</meta>
 	<data type="array">
 		<languageKey index="default" type="array">
@@ -10,6 +10,7 @@
 			<label index="extension">Extension</label>
 			<label index="name">Name</label>
 			<label index="path">Path</label>
+			<label index="content">Content</label>
 			<label index="user">Backend user</label>
 			<label index="plugin">Plugin</label>
 			<label index="ctype">Content type</label>
@@ -20,19 +21,22 @@
 			<label index="pagetitle">Page title (with edit link)</label>
 			<label index="pluginschoose">Choose a display mode :</label>
 			<label index="pluginsmode1">List of all the plugins</label>
-			<label index="pluginsmode2">List of all the content type</label>
-			<label index="pluginsmode3">List of used content type</label>
+			<label index="pluginsmode2">List of all the content types</label>
+			<label index="pluginsmode3">List of used content types</label>
 			<label index="pluginsmode4">List of used plugins</label>
+			<label index="pluginsmode5">Summary</label>
 			<label index="pluginssubmit">Display</label>
+			<label index="references">References</label>
 			<label index="yes">Yes</label>
 			<label index="no">No</label>
-			<label index="eid_title">additional_reports - eID</label>
-			<label index="eid_description">List of all the eID with information and status for each of them.</label>
-			<label index="clikeys_title">additional_reports - cliKeys</label>
-			<label index="clikeys_description">List of all the cliKeys with information and status for each of them.</label>
-			<label index="plugins_title">additional_reports - plugins &amp; content type</label>
-			<label index="plugins_description">List of all the plugins and contents type with information and status for each of them. With this reports you can easyliy know if a plugin or a content type is used on the system (and where it is used).</label>
-			<label index="xclass_title">additional_reports - XCLASS</label>
+			<label index="emlink">EM Link</label>
+			<label index="eid_title">Additional reports - eID</label>
+			<label index="eid_description">List of all the eID with informations and status for each of them.</label>
+			<label index="clikeys_title">Additional reports - cliKeys</label>
+			<label index="clikeys_description">List of all the cliKeys with informations and status for each of them.</label>
+			<label index="plugins_title">Additional reports - plugins &amp; content type</label>
+			<label index="plugins_description">List of all the plugins and contents type with informations and status for each of them. With this report you can easily know if a plugin or a content type is used on the system (and where it is used).</label>
+			<label index="xclass_title">Additional reports - XCLASS</label>
 			<label index="xclass_description">List of all the XCLASS with the name and the path for each of them.</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
@@ -40,30 +44,34 @@
 			<label index="extension">Extension</label>
 			<label index="name">Nom</label>
 			<label index="path">Chemin</label>
+			<label index="content">Contenu</label>
 			<label index="user">Utilisateur backend</label>
 			<label index="plugin">Plugin</label>
 			<label index="ctype">Type de contenu</label>
 			<label index="locallang">Locallang</label>
 			<label index="eminfo">Gest d'extensions</label>
 			<label index="used">Utilisé ?</label>
-			<label index="pid">Page uid</label>
-			<label index="pagetitle">Page title (avec lien vers l'édition)</label>
+			<label index="pid">UID de la page</label>
+			<label index="pagetitle">Titre de la page (avec lien vers l'édition)</label>
 			<label index="pluginschoose">Choisissez le mode d'affichage :</label>
 			<label index="pluginsmode1">Liste de tous les plugins</label>
-			<label index="pluginsmode2">Liste de tous les types de contenus</label>
-			<label index="pluginsmode3">Liste de tous les types de contenus utilisés</label>
+			<label index="pluginsmode2">Liste de tous les types de contenu</label>
+			<label index="pluginsmode3">Liste de tous les types de contenu utilisés</label>
 			<label index="pluginsmode4">Liste de tous les plugins utilisés</label>
+			<label index="pluginsmode5">Resumé</label>
 			<label index="pluginssubmit">Afficher</label>
+			<label index="references">Références</label>
 			<label index="yes">Oui</label>
 			<label index="no">Non</label>
-			<label index="eid_title">additional_reports - eID</label>
+			<label index="emlink">Lien vers le Gest Ext</label>
+			<label index="eid_title">Additional reports - eID</label>
 			<label index="eid_description">Liste de tous les eID avec des informations pour chacun.</label>
-			<label index="clikeys_title">additional_reports - cliKeys</label>
+			<label index="clikeys_title">Additional reports - cliKeys</label>
 			<label index="clikeys_description">Liste de tous les cliKeys avec des informations pour chacun.</label>
-			<label index="plugins_title">additional_reports - plugins &amp; content type</label>
-			<label index="plugins_description">Liste de tous les plugins et types de contenus avec des informations pour chacun. Avec ce module, vous pouvez facilement savoir si un plugin ou un type de contenu est utilisé (et où il est utilisé).</label>
-			<label index="xclass_title">additional_reports - XCLASS</label>
-			<label index="xclass_description">Liste de toutes les XCLASS avec des informations pour chacunes.</label>
+			<label index="plugins_title">Additional reports - plugins &amp; content type</label>
+			<label index="plugins_description">Liste de tous les plugins et types de contenu avec des informations pour chacun. Avec ce module, vous pouvez facilement savoir si un plugin ou un type de contenu est utilisé (et où il est utilisé).</label>
+			<label index="xclass_title">Additional reports - XCLASS</label>
+			<label index="xclass_description">Liste de toutes les XCLASS avec des informations pour chacune.</label>
 		</languageKey>
 	</data>
 </T3locallang>
